src/scss/_components/review/_review.scss
/* ... */
.site_nav_cat_col{
	position: relative;

	.cat_type_title {
		background: #021a37;
		font-size: 20px;
		font-weight: 600;
		text-align: center;
		padding: 0;
		line-height: 50px;
		position: relative;
		border-left: 7px solid #011732;
		border-right: 7px solid #011732;
		white-space: nowrap;
		text-overflow: ellipsis;

		&.free_sites_1:after{
			display: block;
			position: absolute;
			top: 24px;
			right: -8px;
			width: 30%;
			height: 5px;
			content: '';
			background: url(../images/free_arrow_left_thin.png);
			background-size: 100% 26px;

			@include adaptive(1449.98){
				top: 16px;
			}
		}

		&.free_sites_2 span{
			display: block;
			position: absolute;
			top: 16px;
			left: -7px;
			width: 50%;
			height: 26px;
			content: '';
			background: url('../images/free_arrow_center.png');

			@include adaptive(1449.98){
				top: 8px;
			}
		}

		&.free_sites_2:after{
			display: block;
			position: absolute;
			top: 16px;
			left: 50%;
			width: 42px;
			height: 26px;
			transform: translateX(-32px);
			content: '';
			background: url('../images/free_arrow_right.png');

			@include adaptive(1449.98){
				top: 8px;
			}
		}

		@include adaptive(1449.98){
			font-size: 17px;
			line-height: 36px;
		}

		&::before {
			position: absolute;
			left: 50%;
			top: 100%;
			margin-left: -7px;
			content: ' ';
			width: 0;
			height: 0;
			border-style: solid;
			border-width: 7px 7px 0;
			border-color: #021a37 transparent transparent transparent;
		}
	}
	.cat_item {
		display: block;
		color: #dcd6d6;
		height: 45px;
		line-height: 45px;
		border-bottom: 1px solid #05375b;
		font-size: 18px;
		padding: 0 20px 0 80px;
		position: relative;
		white-space: nowrap;
		text-overflow: ellipsis;
		overflow: hidden;

		&:hover{
			text-decoration: underline;
		}

		@include adaptive(1449.98){
			font-size: 16px;
			line-height: 40px;
			height: 40px;
		}

		&::before {
			position: absolute;
			left: 30px;
			top: 50%;
			transform: translateY(-50%);
			display: block;
			margin: 0;
		}
	}
}

.fixed_header .review_header {
	transform: translateY(0);
}
.header_opend .review_header .dropdown-menu {
	display: block;
}

.grecaptcha-badge{
	visibility: hidden !important;
}

.light{
	.joinarrw{
		color: #333;
		a{
			color: #0056c2;
		}
	}

	.ratingtu{
		margin: 5px 0 0;
		position: relative;

		.rtu-ty {
			color: #0641a3;
		}
	}

	.review_container{
		background: #fff;
	}

	@include adaptive(991.98) {
		.review_con .review_scroll_container:after {
			background-image: url("../images/gradient_light.svg");
			background-repeat: no-repeat;
			background-size: 100% 100%;
		}
	}

	.review_con{
		h1, h2{
			color: #113d74;
		}

		h3{
			color: #698ab3;
		}

		.site_review_title_content h3{
			color: #6e87a7;
		}
		.review_scroll_container{
			color: #333;

			.scroll_progress{
				background: #225396;
			}

			&:hover .scroll_thumb {
				background: url(../images/scrollbar-hover.gif) no-repeat;
				background-position: bottom;
				-webkit-background-size: contain;
				background-size: contain;
			}
		}
	}
	.ratingtu .rtu-txt{
		color: #4d4c4c;
	}
	.review_con .review_scroll_container{
		background: #fff;
	}
	.pros_container{
		ul li{
			color: #515050;
		}
		.pros_title{
			color: #333;
		}
	}

	.bread-crumb .show_similar_sites .left_content{
		color: #828282;

		.site_count{
			color: #568e00;
		}

		.arrow_down{
			border: 1px solid #828282;

			&:before{
				border-color: #828282 transparent transparent transparent;
			}
		}

		.site_name{
			color: #656363;
		}
	}

	.review_con .review_scroll_container #cs_com a{
		color: #4099f9;

		&:hover, &:focus{
			color: #337ab7;
		}
	}

	.pirateC{
		div{
			color: rgb(51, 51, 51);
		}
	}

	.swiper-slide-prev,
	.swiper-slide-next{
		.slide_item_inner{
			&:before{
				background-color: rgba(255, 255, 255, .7);
			}
		}
	}
}

.footer {
	@include adaptive(767) {
		padding-bottom: 70px;
	}
}

.fixed_header{
	.bread-crumb{
		.show_similar_sites{
			display: block;

			@include respond('ipad_portrait'){
				position: fixed;
				top: 120px;
				left: 0;
				color: #fff;
				z-index: 10;

				.deIcon{
					border: 1px solid #828282;
					background: #fff;
				}
			}

			@include adaptive(1023.98) {
				position: fixed;
				top: 120px;
				left: 0;
				color: #fff;
				background: #77c28e;
				padding: 5px 15px;
				z-index: 10;
				width: 100%;
				justify-content: center;

				.left_content{
					flex-grow: 0;

					@include adaptive(1023.98) {
						color: #fff;
					}

					.arrow_down{
						@include adaptive(1023.98) {
							border: 1px solid #fff;

							&:before{
								border-color: #fff transparent transparent transparent;
							}
						}
					}

					.site_name{
						@include adaptive(1023.98) {
							color: #fff;
						}
					}

					.site_count{
						@include adaptive(1023.98) {
							color: #fff;
						}
					}
				}

				.deIcon{
					border: 1px solid #828282;
					background: #fff;
				}
			}

			@include adaptive(767) {
				padding: 0 15px;
			}
		}
	}
}

